reflection - getting dictionary with questions and types

--- a/Ex03/Ex03.GarageLogic.csproj
+++ b/Ex03/Ex03.GarageLogic.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Ex03</RootNamespace>
     <AssemblyName>Ex03</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -21,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -37,9 +40,14 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="eCarColor.cs" />
+    <Compile Include="eEngineType.cs" />
     <Compile Include="eFuelType.cs" />
+    <Compile Include="eMenuChoise.cs" />
     <Compile Include="Engine.cs" />
-    <Compile Include="eVehicleStatus  .cs" />
+    <Compile Include="eNumOfWheels.cs" />
+    <Compile Include="EnumStatic.cs" />
+    <Compile Include="eVehicleStatus.cs" />
+    <Compile Include="eVehicleType.cs" />
     <Compile Include="Garage.cs" />
     <Compile Include="GarageCustomerDetails.cs" />
     <Compile Include="OnElectricity.cs" />
@@ -48,7 +56,9 @@
     <Compile Include="OnFuel.cs" />
     <Compile Include="Motorcycle.cs" />
     <Compile Include="Truck.cs" />
+    <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="Vehicle.cs" />
+    <Compile Include="VehicleFactory.cs" />
     <Compile Include="Wheel.cs" />
   </ItemGroup>
   <ItemGroup>
